fixed center alignment of state text by adding spacer padding to the right of the text

--- a/src/styles.css
+++ b/src/styles.css
@@ -178,6 +178,7 @@ ha-card {
   text-overflow: ellipsis;
   overflow: hidden;
   margin-left: calc(28px + var(--vc-spacing)); /* size + margin of spinner */
+  margin-right: var(--vc-spacing); /* size + margin of spinner */
 }
 
 .status mwc-circular-progress {
